Revision history for Perl extension DBIx::Tree

1.95  Web Feb 16 11:52:00 2011
	- Replace /usr/bin/perl with /usr/bin/env perl.
	- Replace common::sense with use strict and use warnings, to get uninit var warnings.

1.94  Mon Sep 20  9:06:00 2010
	- Apparently DBD::SQLite does not ship with Perl 5.13.4, according to cpantesters
	  (http://www.cpantesters.org/cpan/report/a402f106-c317-11df-bbe8-e11f06264d1f)
	  so I've added it explicitly to Build.PL and Makefile.PL.

1.93  Sat Sep 18 14:53:00 2010
	- Use File::Temp to get a temp dir name, rather than using /tmp.
	- Use File::Spec to combine that temp dir and the file name test.sqlite.
	- Delete the file examples/textexample.pl, since it just duplicates the
	  functionality of t/test.t.
	- Add 'use warnings' to t/test.t and examples/*.pl, which means vars are
	  now all declared.

1.92  Fri Sep 17 12:46:00 2010
	- DBIx::Tree didn't 'use' DBI, but it did use $DBI::errstr.
	  So I've added a 'use DBI' to Tree.pm.
	- Add Carp and DBI to list of dependencies, in Build.PL and Makefile.PL.
	- Specify recent version numbers for Carp, DBI, Test::More and Test::Pod.
	- As always, thanx to CPAN testers.

1.91  Wed Sep 15 14:08:00 2010
	- Maintenance taken over by Ron Savage.
	- Version numbering changed to x.xx format.
	- Add Build.PL.
	- Add MANIFEST.SKIP.
	- Rename Changes to CHANGES.
	- Move ./Tree.pm into ./lib/DBIx/Tree.pm.
	- Move ./test.pl into ./t/test.t.
	- Move ./INSTALL.SQL into ./t/.
	- Add ./t/pod.t.
	- Remove execute bit from doc files.
	- Rewrite Makefile.PL.
	- Used ini.report.pl (from Module::Metadata::Changes) to generate
		machine-readable Changelog.ini.
	- Patched as per RT#32461 (kindly reported (in 2008) by
		huhlig [...] clickconsulting.com).
	- Eliminate usage of file ./PWD.
	- Fix t/*.t and examples/*.pl to use DBI_DSN, DBI_USER and DBI_PASS
		from the environment, if defined, or to default to SQLite.
		MySQL is no longer hard-coded anywhere.