@@ -28,8 +28,8 @@
       "runtime" : {
          "requires" : {
             "Carp" : "1.08",
-            "DBD::SQLite" : "1.31",
-            "DBI" : "1.612",
+            "DBD::SQLite" : "1.37",
+            "DBI" : "1.622",
             "File::Spec" : "3.31",
             "File::Temp" : "0.22"
          }
@@ -38,7 +38,7 @@
    "provides" : {
       "DBIx::Tree" : {
          "file" : "lib/DBIx/Tree.pm",
-         "version" : "1.94"
+         "version" : "1.95"
       }
    },
    "release_status" : "stable",
@@ -47,5 +47,5 @@
          "http://opensource.org/licenses/artistic-license.php"
       ]
    },
-   "version" : "1.94"
+   "version" : "1.95"
 }
