@@ -25,8 +25,8 @@ WriteMakefile
 	PREREQ_PM =>
 	{
 		Carp        => 1.08,
-		DBD::SQLite => 1.31,
-		DBI         => 1.612,
+		DBD::SQLite => 1.37,
+		DBI         => 1.622,
 		File::Spec  => 3.31,
 		File::Temp  => 0.22,
 		Test::More  => 0.94,
